# noshell

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  default.nix  flake.nix  main.c  module.nix  noshell.h.in  package.nix  readme.md  shell.nix
.github/workflows/: build.yaml
